--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robo",
+  "homepage": "https://AshwiniKheersagar.github.io/Job-Listing-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +11,15 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "^11.0.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.2.0",
     "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^3.4.14"
   }
