--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "^3.0.1",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^11.0.2",
+    "react-toastify": "^8.1.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server --watch src/jobs.json --port 8000"
